# qtapp

./: README.md  pyproject.toml
examples/: demo.py
qtapp/: app.py  style.qss
qtapp/common/models/: ItemTableModel.py  JsonModel.py  PathListModel.py  TreeModel.py  __init__.py
qtapp/common/services/: FileService.py  __init__.py
qtapp/common/widgets/: AboutDialog.py  ClickableLabel.py  ElidingLabel.py  FilePathEdit.py  InlineNotification.py  NavigationBar.py  OutputWidget.py  PasswordEdit.py  PathList.py  SearchEdit.py  Section.py  StatefulWidget.py  StatusBar.py  ToggleButton.py  ToolBarSpacer.py  TreeView.py  __init__.py
qtapp/docks/: __init__.py  services.py
qtapp/exceptions/: __init__.py
qtapp/plugins/: __init__.py  models.py  schemas.py  services.py  settings.py  widgets.py
qtapp/settings/: __init__.py  services.py  widgets.py
qtapp/utils/: __init__.py  logging.py  passwords.py  registrable.py  singleton.py  worker.py
