[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "qtapp"
version = "1.0.0"
description = "Framework built on top of Qt6 simplifiing creation of desktop apps."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Justus Röderer", email = "mail@dateiexplorer.de" }]
dependencies = [
    "PySide6 ~= 6.6.3.1",
    "QtAwesome ~= 1.3.1",
]

[tool.setuptools.package-data]
qtapp = ["*"]

